# EDITH

./: .env.example  .gitignore  DEPLOYMENT.md  ML2_CONNECTION_GUIDE.txt  README.md  setup.sh
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  dimming_jni.cpp  eye_tracking_jni.cpp  hand_tracking_jni.cpp
android/app/src/main/java/com/edith/ml2/: MainActivity.kt  SensorServices.kt
android/app/src/main/res/xml/: network_config.xml
backend/: requirements.txt  server.py
backend/services/: affective_ui.py  ambient_intelligence.py  aoi_service.py  gmail_service.py  llm_service.py  memory_service.py  predictive_engine.py  privacy_sentinel.py  proactive_engine.py  rppg_service.py  search_service.py  spatial_kg.py  spatial_translation.py  swarm_orchestrator.py  vision_service.py  voice_service.py  whatsapp_service.py  youtube_service.py
frontend/: index.html  setup.html
scripts/: fix_network_mac_linux.sh  open_firewall_windows.bat
